--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,24 @@
     background-color: #fff;
 }
 
+a.header-link{
+    text-decoration:none; 
+    color: #292929;
+}
+
+a.header-link:hover{
+    color: dimgrey;
+}
+
+a.drawer-link{
+    text-decoration:none; 
+    color: rgb(49, 49, 255);
+}
+
+a.drawer-link:hover{
+    color: cornflowerblue;
+}
+
 .header-ttl{
     font-size: 24px;
     width: 80px;
@@ -18,11 +36,12 @@
 .header-nav-list{
     display: flex;
     font-weight: bold;
-    z-index: 1;
+    z-index: 1;   
 }
 
 .header-nav-item{
     margin-right: 30px;
+    text-decoration:none;
 }
 
 .menu{
@@ -44,14 +63,79 @@
 
 .chatchcopy-container{
     color: #fff;
-    display: flex;
+    /*display: flex;
     justify-content: center;
     align-items: center;
-    height: inherit;
+    height: inherit;*/
+    position: relative;
+    left: 50%;
+    top: 50%;
+    /*max-width: 100%;*/
+    transform: translate(-50%,-50%);
 }
 
 .chatchcopy-title{
     font-weight: bold;
     font-size: 50px;
     text-align: center;
+    line-height: 1.5em;
+}
+
+.chatchcopy-item{
+    font-weight: bold;
+    font-size: 18px;
+    text-align: center;
+}
+
+/* future */
+.future{
+    margin-top: 0;
+    padding-top:80px;
+    padding-bottom: 80px;
+    padding-left: 10%;
+    padding-right: 10%;
+    background: #202020;
+    color: #fff;
+}
+
+.future-title{
+    font-weight: bold;
+    font-size: 30px;
+    text-align: left;
+}
+
+.future-item{
+    margin-top: 30px;
+    font-size: 16px;
+    text-align: left;
+    line-height: 1.5em;
+}
+
+/* Survice */
+.survice-item{
+    margin-top: 80px;
+    margin-bottom: 30px;
+    font-size: 30px;
+    text-align: center;
+}
+
+
+
+
+
+
+
+.btn{
+    display: block;
+    width: 300px;
+    padding:15px;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    background-color: rgb(190, 0, 15); 
+    font-weight: bold;
+}
+
+.btn:hover{
+    background-color: rgb(226, 102, 112);
 }
